# memo-stt

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: basic.rs  custom_vocabulary.rs  gui_integration.rs  microphone.rs
scripts/: download_model.py  download_model.sh  setup_models.sh
src/: app_detection.rs  ble.rs  engine.rs  lib.rs  main.rs  model.rs  opus_decoder.rs
src/trigger/: hotkey.rs  mod.rs
