[package]
name = "memo-stt"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
authors = ["Memo Team"]
description = "Plug-and-play speech-to-text library: 3 lines of code to add STT to any Rust application. GPU-accelerated Whisper, zero configuration, works everywhere."
license = "MIT"
repository = "https://github.com/memo/memo-stt"
homepage = "https://github.com/memo/memo-stt"
documentation = "https://docs.rs/memo-stt"
keywords = [
    "speech-to-text", "stt", "whisper", "transcription",
    "voice", "audio", "dictation", "asr", "speech-recognition",
    "gpu", "metal", "cross-platform", "plug-and-play", "easy",
    "simple", "lightweight", "fast", "real-time"
]
categories = [
    "multimedia::audio",
    "multimedia::speech",
    "science::ai::machine-learning",
    "development-tools",
    "api-bindings"
]
readme = "README.md"

[lib]
name = "memo_stt"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "memo-stt"
path = "src/main.rs"

[features]
default = ["binary"]
binary = ["cpal", "rdev", "enigo", "audiopus", "anyhow", "log", "btleplug", "tokio", "futures", "uuid", "base64"]

[dependencies]
# Whisper STT with Metal GPU acceleration
whisper-rs = { version = "0.12", features = ["metal"] }

# CPU detection for optimal thread count
num_cpus = "1.0"

# Model downloading
ureq = { version = "2.9", default-features = false, features = ["tls"] }
dirs = "5.0"

# JSON output for FINAL: transcriptions
serde_json = "1.0"

# Binary-only dependencies (for the memo-stt binary)
# These are optional for library users
cpal = { version = "0.15", optional = true }
rdev = { version = "0.5", optional = true }
enigo = { version = "0.1", optional = true }

# Opus decoder for BLE audio
audiopus = { version = "0.2", optional = true }
anyhow = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
base64 = { version = "0.22", optional = true }

# BLE connectivity
btleplug = { version = "0.11", optional = true }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }
futures = { version = "0.3", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }




[profile.release]
opt-level = 3            # Optimize for speed
lto = "fat"              # Full link-time optimization for maximum speed
codegen-units = 1        # Better optimization
strip = true             # Strip symbols

[profile.dev]
opt-level = 0
debug = true
